--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@supabase/supabase-js": "^2.98.0",
     "dotenv": "^17.3.1",
     "fastify": "^5.7.4",
-    "pg": "^8.19.0"
+    "pg": "^8.19.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@eslint/js": "^10.0.1",
